--- a/index.html
+++ b/index.html
@@ -37,13 +37,7 @@
 
 <p>수업자료를 다운로드 받으려면 오른쪽의 <img src="https://github.com/mtinet/tech/blob/master/button.png" alt="'Download ZIP File'"> 버튼을 누르세요. </p>
 
-<p><img src="https://github.com/mtinet/tech/zipball/master" alt="예제 사진"></p>
-
-<pre><code>      &lt;a href="https://github.com/mtinet/tech/zipball/master" class="button"&gt;
-        &lt;small&gt;Download&lt;/small&gt;
-        .zip file
-      &lt;/a&gt;
-</code></pre>
+<p><img src="http://www.littlebear.dk/images/sangskjulerfoto/hjerte.jpg" alt="하트"></p>
 
 <p>lesson 4 on</p>
         </section>
