--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <hr>
 
-<p>수업자료를 다운로드 받으려면 오른쪽의 <img src="https://github.com/mtinet/tech/blob/master/button.png" alt="'Download ZIP File'"> 버튼을 누르세요. </p>
+<p>수업자료를 다운로드 받으려면 오른쪽의 <img src="https://raw.githubusercontent.com/mtinet/tech/gh-pages/images/button.png" alt="'Download ZIP File'"> 버튼을 누르세요. </p>
 
 <p><img src="http://www.littlebear.dk/images/sangskjulerfoto/hjerte.jpg" alt="하트"></p>
 
