Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <h2>
 <a id="시험-범위" class="anchor" href="#%EC%8B%9C%ED%97%98-%EB%B2%94%EC%9C%84" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>시험 범위</h2>
 
-<p>Lesson 3 : What is Software?<img src="https://www.youtube.com/watch?v=s-hN_KOBaEQ" alt="비로소 세상의 모든것이 연결되다, 사물인터넷편"><br>
+<p>Lesson 3 : What is Software? <a href="https://www.youtube.com/watch?v=s-hN_KOBaEQ">비로소 세상의 모든것이 연결되다, 사물인터넷편</a><br>
 Lesson 4 : Open Source SW &amp; HW<br>
 Lesson 5 : Arduino IDE Install<br>
 Lesson 6 : Blink<br>
@@ -55,6 +55,14 @@ Lesson 10 : Pull Up, Pull Down Resistance, Electronic Circuit  </p>
 
 <h2>
 <a id="강의-요약-영상" class="anchor" href="#%EA%B0%95%EC%9D%98-%EC%9A%94%EC%95%BD-%EC%98%81%EC%83%81" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>강의 요약 영상</h2>
+
+<p><a href="https://www.youtube.com/watch?v=NJaKUq4o9RE">아두이노 보드의 구조</a>
+<a href="https://www.youtube.com/watch?v=_iOzubA6nsI">아두이노 IDE와 Blink</a>
+<a href="https://www.youtube.com/watch?v=aNVlI3sE7RE">아두이노 스케치 구조와 수정</a>
+<a href="https://www.youtube.com/watch?v=aNVlI3sE7RE">브레드 보드 1</a>
+<a href="https://www.youtube.com/watch?v=nDDynSRqwaA">브레드 보드 2</a>
+<a href="https://www.youtube.com/watch?v=nDDynSRqwaA">신호등 만들기 1</a>
+<a href="https://www.youtube.com/watch?v=P501IHtrua8">신호등 만들기 2</a></p>
         </section>
 
         <aside id="sidebar">
