Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@ Lesson 10 : Pull Up, Pull Down Resistance, Electronic Circuit  </p>
 <a href="https://www.youtube.com/watch?v=aNVlI3sE7RE">브레드 보드 1</a><br>
 <a href="https://www.youtube.com/watch?v=nDDynSRqwaA">브레드 보드 2</a><br>
 <a href="https://www.youtube.com/watch?v=nDDynSRqwaA">신호등 만들기 1</a><br>
-<a href="https://www.youtube.com/watch?v=P501IHtrua8">신호등 만들기 2</a>  </p>
+<a href="https://www.youtube.com/watch?v=P501IHtrua8">신호등 만들기 2</a><br>
+<a href="https://www.youtube.com/watch?v=BYd7muRR1JA">시리얼 모니터</a><br>
+<a href="https://www.youtube.com/watch?v=VdrcKw5IzB4">풀업저항, 풀다운 저항, 저항띠 읽기</a>  </p>
         </section>
 
         <aside id="sidebar">
