--- a/index.html
+++ b/index.html
@@ -1,52 +1,42 @@
-<!DOCTYPE html>
+<!doctype html>
+<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
+<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
 <html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=640">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <link rel="stylesheet" href="stylesheets/core.css" media="screen">
-    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
+  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
+  <link rel="stylesheet" href="stylesheets/github-dark.css">
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script type="text/javascript" src="javascripts/script.js"></script>
 
-    <script type="text/javascript" src="javascripts/modernizr.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
-    <script type="text/javascript">
-      $(document).ready(function () {
-        $('#main_content').headsmart()
-      })
-    </script>
-    <title>Tech by mtinet</title>
-  </head>
+  <title>Tech</title>
+  <meta name="description" content="">
 
-  <body>
-    <a id="forkme_banner" href="https://github.com/mtinet/tech">View on GitHub</a>
-    <div class="shell">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 
-      <header>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <h1>Tech</h1>
-            <h2></h2>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-      </header>
+</head>
 
-      <section id="downloads">
-        <span class="inner">
-          <a href="https://github.com/mtinet/tech/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/mtinet/tech/tarball/master" class="tgz"><em>download</em> .TGZ</a>
-        </span>
-      </section>
+<body>
 
-
-      <span class="banner-fix"></span>
-
-
-      <section id="main_content">
-        <hr>
+  <div class="wrapper">
+    <header>
+      <h1 class="title">Tech</h1>
+    </header>
+    <div id="container">
+      <p class="tagline"></p>
+      <div id="main" role="main">
+        <div class="download-bar">
+        <div class="inner">
+          <a href="https://github.com/mtinet/tech/tarball/master" class="download-button tar"><span>Download</span></a>
+          <a href="https://github.com/mtinet/tech/zipball/master" class="download-button zip"><span>Download</span></a>
+          <a href="https://github.com/mtinet/tech" class="code">View Tech on GitHub</a>
+        </div>
+        <span class="blc"></span><span class="trc"></span>
+        </div>
+        <article class="markdown-body">
+          <hr>
 
 <h1>
 <a id="기술-수업-자료실" class="anchor" href="#%EA%B8%B0%EC%88%A0-%EC%88%98%EC%97%85-%EC%9E%90%EB%A3%8C%EC%8B%A4" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>기술 수업 자료실</h1>
@@ -89,23 +79,27 @@ Lesson 10 : Pull Up, Pull Down Resistance, Electronic Circuit  </p>
 <a href="https://www.youtube.com/watch?v=BYd7muRR1JA">시리얼 모니터</a><br>
 <a href="https://www.youtube.com/watch?v=VdrcKw5IzB4">풀업저항, 풀다운 저항, 저항띠 읽기</a>  </p>
 
-<p><img src="https://github.com/mtinet/tech/blob/gh-pages/images/zzz.jpg" alt="쯔위"></p>
-      </section>
-
-      <footer>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <p>this project by <a href="https://github.com/mtinet">mtinet</a> can be found on <a href="https://github.com/mtinet/tech">GitHub</a></p>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-        <p>Generated with <a href="https://pages.github.com">GitHub Pages</a> using Merlot</p>
-        <span class="octocat"></span>
-      </footer>
-
+<p><img src="https://raw.githubusercontent.com/mtinet/tech/gh-pages/images/zzz.jpg" alt="쯔위"></p>
+        </article>
+      </div>
     </div>
+    <footer>
+      <div class="owner">
+      <p><a href="https://github.com/mtinet" class="avatar"><img src="https://avatars2.githubusercontent.com/u/13882302?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/mtinet">mtinet</a> maintains <a href="https://github.com/mtinet/tech">Tech</a></p>
 
-    
-  </body>
+
+      </div>
+      <div class="creds">
+        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
+      </div>
+    </footer>
+  </div>
+  <div class="current-section">
+    <a href="#top">Scroll to top</a>
+    <a href="https://github.com/mtinet/tech/tarball/master" class="tar">tar</a><a href="https://github.com/mtinet/tech/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+    <p class="name"></p>
+  </div>
+
+  
+</body>
 </html>
