Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,42 +1,45 @@
 <!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Tech by mtinet</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-dark.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/main.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
-  <link rel="stylesheet" href="stylesheets/github-dark.css">
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
+  </head>
+  <body>
 
-  <title>Tech</title>
-  <meta name="description" content="">
+      <header>
+        <h1>Tech</h1>
+        <p></p>
+      </header>
 
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+      <div id="banner">
+        <span id="logo"></span>
 
-</head>
-
-<body>
-
-  <div class="wrapper">
-    <header>
-      <h1 class="title">Tech</h1>
-    </header>
-    <div id="container">
-      <p class="tagline"></p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/mtinet/tech/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/mtinet/tech/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/mtinet/tech" class="code">View Tech on GitHub</a>
+        <a href="https://github.com/mtinet/tech" class="button fork"><strong>View On GitHub</strong></a>
+        <div class="downloads">
+          <span>Downloads:</span>
+          <ul>
+            <li><a href="https://github.com/mtinet/tech/zipball/master" class="button">ZIP</a></li>
+            <li><a href="https://github.com/mtinet/tech/tarball/master" class="button">TAR</a></li>
+          </ul>
         </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <hr>
+      </div><!-- end banner -->
+
+    <div class="wrapper">
+      <nav>
+        <ul></ul>
+      </nav>
+      <section>
+        <hr>
 
 <h1>
 <a id="기술-수업-자료실" class="anchor" href="#%EA%B8%B0%EC%88%A0-%EC%88%98%EC%97%85-%EC%9E%90%EB%A3%8C%EC%8B%A4" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>기술 수업 자료실</h1>
@@ -79,28 +82,16 @@ Lesson 10 : Pull Up, Pull Down Resistance, Electronic Circuit  </p>
 <a href="https://www.youtube.com/watch?v=BYd7muRR1JA">시리얼 모니터</a><br>
 <a href="https://www.youtube.com/watch?v=VdrcKw5IzB4">풀업저항, 풀다운 저항, 저항띠 읽기</a>  </p>
 
-<p><img src="https://raw.githubusercontent.com/mtinet/tech/gh-pages/images/zzz.jpg" alt="쯔위">
-gg</p>
-        </article>
-      </div>
+<p><img src="https://raw.githubusercontent.com/mtinet/tech/gh-pages/images/zzz.jpg" alt="쯔위"></p>
+
+<p><a href="https://goo.gl/cKxZDY">프레젠테이션 연습</a></p>
+      </section>
+      <footer>
+        <p>Project maintained by <a href="https://github.com/mtinet">mtinet</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
+      </footer>
     </div>
-    <footer>
-      <div class="owner">
-      <p><a href="https://github.com/mtinet" class="avatar"><img src="https://avatars2.githubusercontent.com/u/13882302?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/mtinet">mtinet</a> maintains <a href="https://github.com/mtinet/tech">Tech</a></p>
-
-
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
-    </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/mtinet/tech/tarball/master" class="tar">tar</a><a href="https://github.com/mtinet/tech/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
-
-  
-</body>
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+    
+  </body>
 </html>
