Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -40,7 +40,14 @@
 <hr>
 
 <h2>
-<a id="시험-범위" class="anchor" href="#%EC%8B%9C%ED%97%98-%EB%B2%94%EC%9C%84" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>시험 범위</h2>
+<a id="평가-계획" class="anchor" href="#%ED%8F%89%EA%B0%80-%EA%B3%84%ED%9A%8D" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>평가 계획</h2>
+
+<p><a href="https://docs.google.com/document/d/1zxwW3d9tsM2VzsqXCZo85H4P8DWhpoxKFneuiCAGbQ8/edit?usp=sharing">2016학년도 기술 교과 평가 계획</a></p>
+
+<hr>
+
+<h2>
+<a id="중간고사-시험-범위" class="anchor" href="#%EC%A4%91%EA%B0%84%EA%B3%A0%EC%82%AC-%EC%8B%9C%ED%97%98-%EB%B2%94%EC%9C%84" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>중간고사 시험 범위</h2>
 
 <p>Lesson 3 : What is Software? <a href="https://www.youtube.com/watch?v=s-hN_KOBaEQ">비로소 세상의 모든것이 연결되다, 사물인터넷편</a><br>
 Lesson 4 : Open Source SW &amp; HW<br>
@@ -54,7 +61,7 @@ Lesson 10 : Pull Up, Pull Down Resistance, Electronic Circuit  </p>
 <hr>
 
 <h2>
-<a id="강의-요약-영상" class="anchor" href="#%EA%B0%95%EC%9D%98-%EC%9A%94%EC%95%BD-%EC%98%81%EC%83%81" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>강의 요약 영상</h2>
+<a id="중간고사-대비-강의-요약-영상" class="anchor" href="#%EC%A4%91%EA%B0%84%EA%B3%A0%EC%82%AC-%EB%8C%80%EB%B9%84-%EA%B0%95%EC%9D%98-%EC%9A%94%EC%95%BD-%EC%98%81%EC%83%81" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>중간고사 대비 강의 요약 영상</h2>
 
 <p><a href="https://www.youtube.com/watch?v=NJaKUq4o9RE">아두이노 보드의 구조</a><br>
 <a href="https://www.youtube.com/watch?v=_iOzubA6nsI">아두이노 IDE와 Blink</a><br>
@@ -65,8 +72,6 @@ Lesson 10 : Pull Up, Pull Down Resistance, Electronic Circuit  </p>
 <a href="https://www.youtube.com/watch?v=P501IHtrua8">신호등 만들기 2</a><br>
 <a href="https://www.youtube.com/watch?v=BYd7muRR1JA">시리얼 모니터</a><br>
 <a href="https://www.youtube.com/watch?v=VdrcKw5IzB4">풀업저항, 풀다운 저항, 저항띠 읽기</a>  </p>
-
-<p><img src="https://raw.githubusercontent.com/mtinet/tech/gh-pages/images/zzz.jpg" alt="쯔위"></p>
         </section>
 
         <aside id="sidebar">
