Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -114,9 +114,14 @@ Lesson 10 : Pull Up, Pull Down Resistance, Electronic Circuit  </p>
 <h2>
 <a id="기말고사-시험범위--" class="anchor" href="#%EA%B8%B0%EB%A7%90%EA%B3%A0%EC%82%AC-%EC%8B%9C%ED%97%98%EB%B2%94%EC%9C%84--" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>기말고사 시험범위  </h2>
 
-<p>Lesson 11 :<br>
-Lesson 12 :<br>
-수행평가 :  </p>
+<p>Lesson 11 : PWM, for, while<br>
+Lesson 12 : if, switch, map<br>
+수행평가 1 : Team Building<br>
+수행평가 2 : Image, Sketch<br>
+수행평가 3 : Flowchart<br>
+수행평가 4 : Schematic<br>
+수행평가 5,6 : Prototyping 1, 2<br>
+수행평가 7 : Symbol, Table, Graph, Presentation    </p>
 
 <hr>
 
