Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -129,6 +129,10 @@ Lesson 12 : if, switch, map<br>
 
 <h2>
 <a id="기말고사-대비-강의-요약-영상--" class="anchor" href="#%EA%B8%B0%EB%A7%90%EA%B3%A0%EC%82%AC-%EB%8C%80%EB%B9%84-%EA%B0%95%EC%9D%98-%EC%9A%94%EC%95%BD-%EC%98%81%EC%83%81--" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>기말고사 대비 강의 요약 영상  </h2>
+
+<p><a href="https://www.youtube.com/watch?v=Nx6w0iCuhSc">PWM, for문, while문</a><br>
+<a href="https://www.youtube.com/watch?v=zXINLq52imQ">if문, switch문, map함수</a><br>
+<a href="https://youtu.be/pOztwMxEoKA">수행평가 부연설명</a>  </p>
         </section>
 
         <aside id="sidebar">
