--- a/index.html
+++ b/index.html
@@ -47,9 +47,14 @@
 <hr>
 
 <h2>
+<a id="1학기" class="anchor" href="#1%ED%95%99%EA%B8%B0" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>1학기</h2>
+
+<hr>
+
+<h2>
 <a id="중간고사-시험-범위" class="anchor" href="#%EC%A4%91%EA%B0%84%EA%B3%A0%EC%82%AC-%EC%8B%9C%ED%97%98-%EB%B2%94%EC%9C%84" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>중간고사 시험 범위</h2>
 
-<p>Lesson 3 : What is Software? <a href="https://www.youtube.com/watch?v=s-hN_KOBaEQ">비로소 세상의 모든것이 연결되다, 사물인터넷편</a><br>
+<p>Lesson 3 : What is IoT? <a href="https://www.youtube.com/watch?v=s-hN_KOBaEQ">비로소 세상의 모든것이 연결되다, 사물인터넷편</a><br>
 Lesson 4 : Open Source SW &amp; HW<br>
 Lesson 5 : Arduino IDE Install<br>
 Lesson 6 : Blink<br>
@@ -133,6 +138,25 @@ Lesson 12 : if, switch, map<br>
 <p><a href="https://www.youtube.com/watch?v=Nx6w0iCuhSc">PWM, for문, while문</a><br>
 <a href="https://www.youtube.com/watch?v=zXINLq52imQ">if문, switch문, map함수</a><br>
 <a href="https://youtu.be/pOztwMxEoKA">수행평가 부연설명</a>  </p>
+
+<hr>
+
+<h2>
+<a id="2학기" class="anchor" href="#2%ED%95%99%EA%B8%B0" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>2학기</h2>
+
+<hr>
+
+<h2>
+<a id="중간고사-시험범위" class="anchor" href="#%EC%A4%91%EA%B0%84%EA%B3%A0%EC%82%AC-%EC%8B%9C%ED%97%98%EB%B2%94%EC%9C%84" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>중간고사 시험범위</h2>
+
+<p>Lesson 1 : Software(<a href="https://youtu.be/i7Aks0L80lM">세상의 시작과 끝, 소프트웨어 편</a><br>
+Lesson 2 : Library, Servo
+Lesson 3 : Random, RGB LED  </p>
+
+<hr>
+
+<h2>
+<a id="기말고사-대비-강의-요약-영상---1" class="anchor" href="#%EA%B8%B0%EB%A7%90%EA%B3%A0%EC%82%AC-%EB%8C%80%EB%B9%84-%EA%B0%95%EC%9D%98-%EC%9A%94%EC%95%BD-%EC%98%81%EC%83%81---1" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>기말고사 대비 강의 요약 영상  </h2>
         </section>
 
         <aside id="sidebar">
