--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ Lesson 12 : if, switch, map<br>
 <a id="중간고사-시험범위" class="anchor" href="#%EC%A4%91%EA%B0%84%EA%B3%A0%EC%82%AC-%EC%8B%9C%ED%97%98%EB%B2%94%EC%9C%84" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>중간고사 시험범위</h2>
 
 <p>Lesson 1 : Software(<a href="https://youtu.be/i7Aks0L80lM">세상의 시작과 끝, 소프트웨어 편</a><br>
-Lesson 2 : Library, Servo
+Lesson 2 : Library, Servo<br>
 Lesson 3 : Random, RGB LED  </p>
 
 <hr>
