Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -156,7 +156,10 @@ Lesson 3 : Random, RGB LED - <a href="https://1drv.ms/p/s!AuczxMq8lCmfpxvHjuH3DA
 <hr>
 
 <h2>
-<a id="기말고사-대비-강의-요약-영상---1" class="anchor" href="#%EA%B8%B0%EB%A7%90%EA%B3%A0%EC%82%AC-%EB%8C%80%EB%B9%84-%EA%B0%95%EC%9D%98-%EC%9A%94%EC%95%BD-%EC%98%81%EC%83%81---1" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>기말고사 대비 강의 요약 영상  </h2>
+<a id="중간고사-대비-강의-요약-영상--" class="anchor" href="#%EC%A4%91%EA%B0%84%EA%B3%A0%EC%82%AC-%EB%8C%80%EB%B9%84-%EA%B0%95%EC%9D%98-%EC%9A%94%EC%95%BD-%EC%98%81%EC%83%81--" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>중간고사 대비 강의 요약 영상  </h2>
+
+<p><a href="https://youtu.be/1IoolB2ZYEM">Library, Servo Motor</a><br>
+<a href="https://youtu.be/pHGN-b2Gey8">random, RGB LED</a>  </p>
         </section>
 
         <aside id="sidebar">
