Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -112,8 +112,6 @@ Lesson 10 : Pull Up, Pull Down Resistance, Electronic Circuit - <a href="https:/
 </li>
 <li>양식은 자유이며, 정성껏 작성바람.<br>
 </li>
-<li>마감된 포트폴리오 피드백은 <a href="https://goo.gl/4G6b9g">https://goo.gl/4G6b9g</a>에서 확인하세요.<br>
-</li>
 </ul>
 
 <hr>
@@ -160,6 +158,49 @@ Lesson 3 : Random, RGB LED - <a href="https://1drv.ms/p/s!AuczxMq8lCmfpxvHjuH3DA
 
 <p><a href="https://youtu.be/1IoolB2ZYEM">Library, Servo Motor</a><br>
 <a href="https://youtu.be/pHGN-b2Gey8">random, RGB LED</a>  </p>
+
+<hr>
+
+<h2>
+<a id="수행평가-포트폴리오-양식-1" class="anchor" href="#%EC%88%98%ED%96%89%ED%8F%89%EA%B0%80-%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4-%EC%96%91%EC%8B%9D-1" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>수행평가 포트폴리오 양식</h2>
+
+<p>@ 주의사항  </p>
+
+<ul>
+<li>7, 8단계는 기말고사가 끝난 후에 진행하니 작성하지 않아도 됨.<br>
+</li>
+<li>포트폴리오<br>
+
+<ol>
+<li>구글드라이브나 원드라이브 계정을 만듬<br>
+</li>
+<li>
+<a href="https://goo.gl/5i3zXs">https://goo.gl/5i3zXs</a> 에서 왼쪽 위의 파일-다른이름으로 저장 또는 원드라이브에 저장하여 포트폴리오를 작성<br>
+</li>
+<li>자신의 구글드라이브 또는 원드라이브 계정에 올림<br>
+</li>
+<li>공유 버튼을 눌러 '보기'권한을 가진 링크를 얻음<br>
+</li>
+<li>Goo.gl 에서 짧은 주소로 바꿈<br>
+</li>
+<li>짧아진 링크를 반, 조, 번호, 이름과 함께 적어서 샘에게 문자로 보냄(010-9483-2362)<br>
+</li>
+</ol>
+</li>
+<li>총 페이지는 최소 3쪽, 최대 10쪽을 모자라거나 넘으면 안됨<br>
+</li>
+<li>사진, 움짤, 동영상 자료는 직접 첨부하거나 링크로 첨부<br>
+</li>
+<li>양식은 자유이며, 정성껏 작성바람.<br>
+</li>
+</ul>
+
+<hr>
+
+<h2>
+<a id="기말고사-대비-강의-요약-영상---1" class="anchor" href="#%EA%B8%B0%EB%A7%90%EA%B3%A0%EC%82%AC-%EB%8C%80%EB%B9%84-%EA%B0%95%EC%9D%98-%EC%9A%94%EC%95%BD-%EC%98%81%EC%83%81---1" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>기말고사 대비 강의 요약 영상  </h2>
+
+<p>준비중</p>
         </section>
 
         <aside id="sidebar">
