Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -198,9 +198,20 @@ Lesson 3 : Random, RGB LED - <a href="https://1drv.ms/p/s!AuczxMq8lCmfpxvHjuH3DA
 <hr>
 
 <h2>
+<a id="기말고사-시험범위" class="anchor" href="#%EA%B8%B0%EB%A7%90%EA%B3%A0%EC%82%AC-%EC%8B%9C%ED%97%98%EB%B2%94%EC%9C%84" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>기말고사 시험범위</h2>
+
+<p>Lesson 1 : code.org(<a href="https://code.org">사이트 링크</a>)<br>
+Lesson 2 : 3D Print(교재 확인)<br>
+Lesson 3 : Array, Dot Matrix Module - <a href="https://1drv.ms/p/s!AuczxMq8lCmfpx6v4uqvDb1mD1et">웹에서 보기</a>  </p>
+
+<hr>
+
+<h2>
 <a id="기말고사-대비-강의-요약-영상---1" class="anchor" href="#%EA%B8%B0%EB%A7%90%EA%B3%A0%EC%82%AC-%EB%8C%80%EB%B9%84-%EA%B0%95%EC%9D%98-%EC%9A%94%EC%95%BD-%EC%98%81%EC%83%81---1" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>기말고사 대비 강의 요약 영상  </h2>
 
-<p>준비중</p>
+<p><a href="https://youtu.be/eJswOnaMwr8">code.org</a><br>
+<a href="https://youtu.be/Fd_UWICvXOA">3D print</a><br>
+<a href="https://youtu.be/xP8yFE9NYi4">Array, Dot Matrix Module</a>  </p>
         </section>
 
         <aside id="sidebar">
